--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,4 +1,5 @@
 <!-- AdminLTE imports -->
+
 <!-- Bootstrap 3.3.7 -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <!-- Font Awesome -->
@@ -10,6 +11,7 @@
 <!-- AdminLTE Skins. Choose a skin from the css/skins
         folder instead of downloading all of them to reduce the load. -->
 <link rel="stylesheet" href="css/skin-blue.min.css">
+<link rel="stylesheet" href="css/react-datepicker.css">
 
 <script src="js/jquery.min.js"></script>
 <!-- Bootstrap 3.3.7 -->
