--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -13,6 +13,9 @@
 <link rel="stylesheet" href="css/skin-blue.min.css">
 <link rel="stylesheet" href="css/react-datepicker.css">
 
+<!-- SimpleMDE -->
+<link rel="stylesheet" href="css/simplemde.min.css" />
+
 <script src="js/jquery.min.js"></script>
 <!-- Bootstrap 3.3.7 -->
 <script src="js/bootstrap.min.js"></script>
