Update bootstrap, glyphicons, add listings to storybook

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -12,6 +12,7 @@
         folder instead of downloading all of them to reduce the load. -->
 <link rel="stylesheet" href="css/skin-blue.min.css">
 <link rel="stylesheet" href="css/react-datepicker.css">
+<link rel="stylesheet" href="css/dataTables.bootstrap.min.css">
 
 <!-- SimpleMDE -->
 <link rel="stylesheet" href="css/simplemde.min.css" />
